--- a/TOP.HIDA_presentation.Rmd
+++ b/TOP.HIDA_presentation.Rmd
@@ -4,7 +4,7 @@ author: "Bruno A Lima"
 date: "June, 2nd 2020"
 output:
   slidy_presentation: default
-  beamer_presentation: default
+  ioslides_presentation: default
 bibliography: bibliography.bib
 ---
 
